# Limitanei

./: .gitignore  README.md  casings.py  config.py  controller.py  custom_envs.py  disturbances.py  drone_env.py  gun.py  gun_recoil.py  logger.py  main.py  modes.py  observations.txt  pid_agent.py  projectiles.py  pyproject.toml  replay.py  requirements.txt  test1.py  todo
.claude/: settings.json  settings.local.json
drone_sim/: __init__.py  sim.py
drone_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
drone_sim/control/: __init__.py  controller.py  modes.py
drone_sim/io/: __init__.py  replay.py
drone_sim/physics/: __init__.py  bullets.py  gun.py  targets.py
drone_sim/rl/: __init__.py  callbacks.py  custom_envs.py  env.py  networks.py  viz.py
drone_sim/rl/agents/: __init__.py  pid.py
experiments/: e1_M249_single.ipynb
experiments/experiment-1/: e-1_stabilization_supervised.ipynb  hover_policy_bc.pt
experiments/experiment0/: e0_stabilization.ipynb
experiments/experiment1/: MUJOCO_LOG.TXT  e1_HK416_single.ipynb  e1_M249_single.ipynb
